--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -4376,7 +4376,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Format the DataFrame  \n"
+    "# Format the DataFrame  \n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
    ]
   },
   {
@@ -4388,20 +4395,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate averages for the desired columns. \n"
+    "# Calculate averages for the desired columns. \n",
+    "type_math_average = per_school_summary_df.groupby(\"School Type\").mean()[\"Average Math Score\"]\n",
+    "type_reading_average = per_school_summary_df.groupby(\"School Type\").mean()[\"Average Reading Score\"]\n",
+    "type_percent_passing_math = per_school_summary_df.groupby(\"School Type\").mean()[\"% Passing Math\"]\n",
+    "type_percent_passing_reading = per_school_summary_df.groupby(\"School Type\").mean()[\"% Passing Reading\"]\n",
+    "type_overall_passing_percent = per_school_summary_df.groupby(\"School Type\").mean()[\"% Overall Passing\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.465425</td>\n",
+       "      <td>83.902315</td>\n",
+       "      <td>93.610020</td>\n",
+       "      <td>96.550223</td>\n",
+       "      <td>90.392533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.465425              83.902315       93.610020   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.550223          90.392533  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Assemble into DataFrame. \n"
+    "# Assemble into DataFrame. \n",
+    "type_summary_df = pd.DataFrame({\n",
+    "        \"Average Math Score\": type_math_average,\n",
+    "        \"Average Reading Score\": type_reading_average,\n",
+    "        \"% Passing Math\": type_percent_passing_math,\n",
+    "        \"% Passing Reading\": type_percent_passing_reading,\n",
+    "        \"% Overall Passing\": type_overall_passing_percent})\n",
+    "\n",
+    "type_summary_df"
    ]
   },
   {
@@ -4410,7 +4504,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Format the DataFrame \n"
+    "# # Format the DataFrame \n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
    ]
   },
   {
